--- a/Camera_and_Style.ipynb
+++ b/Camera_and_Style.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -453,10 +453,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: Camera_and_Style_files: No such file or directory\n",
+      "[NbConvertApp] Converting notebook Camera_and_Style.ipynb to markdown\n",
+      "[NbConvertApp] Support files will be in Camera_and_Style_files/\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Writing 7611 bytes to Camera_and_Style.md\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Camera_and_Style_000_Background.png': 'self.camera.background_color = YELLOW',\n",
+       " 'Camera_and_Style_001_ZoomIN.png': 'self.camera.frame.scale(0.6) # needs ZoomedScene',\n",
+       " 'Camera_and_Style_002_ZoomOUT.png': 'self.camera.frame.scale(1.2) # needs ZoomedScene',\n",
+       " 'Camera_and_Style_003_CameraLEFT.png': 'self.camera.frame.shift(LEFT*0.5) # needs ZoomedScene',\n",
+       " 'Camera_and_Style_004_CameraUP.png': 'self.camera.frame.shift(UP*0.4) # needs ZoomedScene',\n",
+       " 'Camera_and_Style_005_MatchHEIGHT.png': 'self.camera.frame.height =  mob.height + 3*SMALL_BUFF # needs ZoomedScene',\n",
+       " 'Camera_and_Style_006_MatchWIDTH.png': 'self.camera.frame.width =  mob.width + 3*SMALL_BUFF # needs ZoomedScene',\n",
+       " 'Camera_and_Style_007_FullScreenRectangle.png': 'mob = FullScreenRectangle(stroke_width=200, color= YELLOW)',\n",
+       " 'Camera_and_Style_008_SurroundingRectangle.png': 'inner = Tex(r\"\\\\textbf{Hello}\", color=WHITE)\\nmob = SurroundingRectangle(inner, corner_radius=0.1)',\n",
+       " 'Camera_and_Style_009_Dot_set_color_by_gradient.png': 'mob = Dot(radius=2.0) \\nmob.set_color_by_gradient([PINK, BLUE])\\nself.add(mob)',\n",
+       " 'Camera_and_Style_010_Polygon_set_color.png': 'mob = Polygon([-1, .5, 0], [-.5, 2, 0], [1, 2, 0], [1.5, .5, 0], [.25, -.5, 0])\\nmob.set_fill(opacity=.5)\\nmob.set_color([TEAL, RED, YELLOW])\\nmob.set_stroke(width=8)\\nmob.move_to(ORIGIN)'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
