--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
    "outputs": [
@@ -450,14 +450,14 @@
       "[NbConvertApp] Making directory Plots_files\n",
       "[NbConvertApp] Making directory Plots_files\n",
       "[NbConvertApp] Making directory Plots_files\n",
-      "[NbConvertApp] Writing 10875 bytes to Plots.md\n"
+      "[NbConvertApp] Writing 12868 bytes to Plots.md\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Plots_000_Axes_e_x.png': 'axes = Axes(\\n    x_range=[-8, 9, 2],\\n    y_range=[-6, 7, 2],\\n    x_length=4,\\n    y_length=4,\\n    axis_config={\"include_numbers\": True, \"numbers_to_exclude\": [0]},\\n    x_axis_config={\"color\": ORANGE},\\n    y_axis_config={\"color\": ORANGE},\\n)\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"f(x)\")\\ngraph = axes.get_graph(lambda x: 5*np.e ** (-x**2/2), x_range=[-5, 5], color=YELLOW)\\ngraph_label = axes.get_graph_label(graph, label=\"e^{-x^2}\", color=YELLOW, x_val=1,dot=False)',\n",
-       " 'Plots_001_Axes2.png': 'axes = Axes(\\n    x_range=[-8, 9, 2],\\n    y_range=[-6, 7, 2],\\n    x_length=4,\\n    y_length=4,\\n    axis_config={\"include_numbers\": True, \"numbers_to_exclude\": [0]},\\n    x_axis_config={\"color\": PINK},\\n    y_axis_config={\"color\": ORANGE},\\n)\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"y\")\\ngraph = axes.get_graph(lambda x: np.e ** x, x_range=[-8, 2], color=GREEN_E)\\ngraph_label = axes.get_graph_label(graph, label=\"e^x\", color=YELLOW)',\n",
+       "{'Plots_000_Axes_e_x.png': 'axes = Axes(\\n    x_range=[-8, 9, 2],\\n    y_range=[-6, 7, 2],\\n    x_length=4,\\n    y_length=4,\\n    axis_config={\"include_numbers\": True, \"numbers_to_exclude\": [0]},\\n    x_axis_config={\"color\": ORANGE},\\n    y_axis_config={\"color\": ORANGE},\\n)\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"f(x)\")\\ngraph = axes.plot(lambda x: 5*np.e ** (-x**2/2), x_range=[-5, 5], color=YELLOW)\\ngraph_label = axes.get_graph_label(graph, label=\"e^{-x^2}\", color=YELLOW, x_val=1,dot=False)\\nself.add(axes, graph, graph_label, axes_label)',\n",
+       " 'Plots_001_Axes_zoom.png': 'class Example(ZoomedScene): \\n    def __init__(self, **kwargs):\\n        ZoomedScene.__init__(\\n            self,\\n            zoom_factor=0.1,\\n            zoomed_display_height=6,\\n            zoomed_display_width=3,\\n            image_frame_stroke_width=20,\\n            zoomed_camera_config={\\n                \"default_frame_stroke_width\": 3,\\n            },\\n            **kwargs\\n        )    \\n\\n    def construct(self):\\n        self.activate_zooming(animate=False)\\n\\n        ax = Axes(\\n            x_range=[0, 10, 2],\\n            y_range=[0,10, 2],\\n            x_length=2,\\n            y_length=2,\\n            x_axis_config={\"color\": ORANGE},\\n            y_axis_config={\"color\": ORANGE},\\n        )\\n        ax.shift(DL)\\n        x_vals = [0, 1, 2, 3,4,5]\\n        y_vals = [2, -1, 4, 2, 4, 1]\\n        graph = ax.plot_line_graph(x_values=x_vals, y_values=y_vals)\\n        self.zoomed_camera.frame.move_to(graph.get_top()+0.1*DL)\\n        self.zoomed_display.shift(3*LEFT+0.4*UP)\\n        self.camera.frame.scale(1/2)\\n        self.camera.frame.shift(UR*1)\\n        self.add(ax, graph)',\n",
        " 'Plots_002_ComplexPlane.png': 'plane = ComplexPlane().add_coordinates()\\nd1 = Dot(plane.n2p(2 + 1j), color=YELLOW)\\nd2 = Dot(plane.n2p(-3 - 2j), color=YELLOW)\\nlabel1 = MathTex(\"2+i\").next_to(d1, UR, 0.1)\\nlabel2 = MathTex(\"-3-2i\").next_to(d2, UR, 0.1)',\n",
        " 'Plots_003_PolarPlane.png': 'polarplane_pi = PolarPlane(\\n            azimuth_units=\"PI radians\",\\n            size=6,\\n            azimuth_label_font_size=33.6,\\n            radius_config={\"font_size\": 33.6},\\n        ).add_coordinates()',\n",
        " 'Plots_004_Graph_with_Number.png': 'vertices = [1, 2, 3, 4, 5, 6, 7, 8]\\nedges = [(1, 7), (1, 8), (2, 3), (2, 4), (2, 5),\\n         (2, 8), (3, 4), (6, 1), (6, 2),\\n         (6, 3), (7, 2), (7, 4)]\\ng = Graph(vertices, edges, layout=\"circular\", layout_scale=3,\\n          labels=True, vertex_config={7: {\"fill_color\": RED}},\\n          edge_config={(1, 7): {\"stroke_color\": RED},\\n                       (2, 7): {\"stroke_color\": RED},\\n                       (4, 7): {\"stroke_color\": RED}})',\n",
